post api action created and cloudinary added

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWR2YW5jZWQtYmFybmFjbGUtNDkuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_hzfcJrOnAbn7DmOlbr6cob9wlFfxC9Z3myGMpYKxXU
-MONGO_URI=mongodb+srv://r:g@cluster0.hado21j.mongodb.net/?retryWrites=true&w=majority&Linkedin=Cluster0
+MONGO_URI=mongodb+srv://r:g@cluster0.hado21j.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CLOUD_NAME=dj90dxawo
+API_KEY=868454837993783
+API_SECRET=pKdwmtYoogIU8yTvCx4_LHuVWeE
